Issue #8767: Restore building with --disable-unicode. Original patch by Stefano Taschini.